# WTC_Bomberman

./: .gitignore  AtjarMan  Bomberman  CMakeCache.txt  CMakeLists.txt  Makefile  PlayerBody.blend  PlayerHead.blend  README.md  bomb.blend  brew_install.sh  bug_EnemyHead.blend  clean.sh  cmake_install.cmake  config.init  gate.blend  install.sh  map.map  maps  pull_assets.sh  robot_EnemyHead.blend  song.txt
Game_Engine/include/: AEntity.class.hpp  Bomb.class.hpp  Config.class.hpp  Enemy.class.hpp  Exception.class.hpp  Explosion.class.hpp  GameEngine.class.hpp  Gate.class.hpp  Player.class.hpp  main.hpp
Game_Engine/src/: AEntity.class.cpp  Bomb.class.cpp  Config.class.cpp  Enemy.class.cpp  Exception.class.cpp  Explosion.class.cpp  GameEngine.class.cpp  Gate.class.cpp  Player.class.cpp  Powerup.class.cpp  Wall.class.cpp  main.cpp
Graphics_lib/: ._HS  ._Inc  ._Object_files  ._Shaders  ._Song.txt  ._SpartanJ-soil2-3492823d05aa  ._Src  ._Textures  Model.cpp  Song.cpp
Graphics_lib/HS/: ._Makefile  ._Old_make_clarense  ._Tmp  Makefile
Graphics_lib/HS/Old_make_clarense/: ._Makefile
Graphics_lib/HS/Tmp/: ._Makefile
Graphics_lib/Inc/: ._Base.hpp  ._Camera.hpp  ._Component.hpp  ._Data_Loader.hpp  ._Light_class.hpp  ._Model.hpp  ._Model_Text.hpp  ._Object_Loader.hpp  ._Render.hpp  ._Render_Engine.hpp  ._Shaders.hpp  ._Text_Model.hpp  ._Texture_Cache.hpp  ._platform.hpp  AnimatedModel.hpp  Base.hpp  Camera.hpp  Component.hpp  Data_Loader.hpp  Light_class.hpp  Mesh.hpp  Model.hpp  Particle_manager.hpp  Particles.hpp  Render.hpp  Render_Engine.hpp  Shaders.hpp  bone.hpp
Graphics_lib/Shaders/: ._Colour_Shading.vert  ._Colour_Shasiner.frag  Colour_Shading.vert  Colour_Shasiner.frag  Particle.frag  Particle.vert  skybox.vert
Graphics_lib/SpartanJ-soil2-3492823d05aa/: ._.hg_archival.txt  ._.hgignore  ._.hgtags  ._README.md  ._bin  ._lib  ._make  ._obj  ._premake4.lua  ._src
Graphics_lib/SpartanJ-soil2-3492823d05aa/lib/: ._linux
Graphics_lib/SpartanJ-soil2-3492823d05aa/make/: ._linux
Graphics_lib/SpartanJ-soil2-3492823d05aa/make/linux/: ._Makefile  ._soil2-perf-test.make  ._soil2-static-lib.make  ._soil2-test.make
Graphics_lib/SpartanJ-soil2-3492823d05aa/src/: ._SOIL2  ._common  ._perf_test  ._test
Graphics_lib/SpartanJ-soil2-3492823d05aa/src/SOIL2/: ._SOIL2.c  ._SOIL2.h  ._etc1_utils.c  ._etc1_utils.h  ._image_DXT.c  ._image_DXT.h  ._image_helper.c  ._image_helper.h  ._jo_jpeg.h  ._pkm_helper.h  ._pvr_helper.h  ._stb_image.h  ._stb_image_write.h  ._stbi_DDS.h  ._stbi_DDS_c.h  ._stbi_ext.h  ._stbi_ext_c.h  ._stbi_pkm.h  ._stbi_pkm_c.h  ._stbi_pvr.h  ._stbi_pvr_c.h
Graphics_lib/SpartanJ-soil2-3492823d05aa/src/common/: ._common.cpp  ._common.hpp
Graphics_lib/SpartanJ-soil2-3492823d05aa/src/perf_test/: ._test_perf_SOIL2.cpp
Graphics_lib/SpartanJ-soil2-3492823d05aa/src/test/: ._test_SOIL2.cpp
Graphics_lib/Src/: ._Camera.cpp  ._Component.cpp  ._Data_Loader.cpp  ._Light_class.cpp  ._Makefile  ._Model.cpp  ._Model_Text.cpp  ._Object_Loader.cpp  ._Render.cpp  ._Render_Engine.cpp  ._Shaders.cpp  ._Text_Model.cpp  ._Texture_Cache.cpp  ._main.cpp  AnimatedModel.cpp  Camera.cpp  Component.cpp  Data_Loader.cpp  Light_class.cpp  Makefile  Mesh.cpp  Model.cpp  Particle_manager.cpp  Particles.cpp  Render.cpp  Render_Engine.cpp  Shaders.cpp  bone.cpp
Graphics_lib/objects_and_textures/Crate/: Crate1.mtl
Graphics_lib/objects_and_textures/Crate/Bomb/: Crate1.mtl
Graphics_lib/objects_and_textures/Crate/LifeUP/: Crate1.mtl
Graphics_lib/objects_and_textures/Crate/Range/: Crate1.mtl
Graphics_lib/objects_and_textures/Crate/Sped/: Crate1.mtl
Graphics_lib/objects_and_textures/animations/: model_Player_ninja_walk.dae  model_Player_walk.dae
Graphics_lib/objects_and_textures/objFiles/: bomb.mtl  bug_EnemyHead.mtl  gate.mtl  model_Player.mtl  robot_EnemyHead.mtl
Graphics_lib/throw_away/: Object_Loader.cpp
Menu_lib/Shaders/: FragmentShader.frag  VertexShader.vert
Menu_lib/Src/: Menu_Engine.cpp
Menu_lib/include/: Base.hpp  Menu_Engine.hpp
Models/blenderFiles/: Plane.blend  Plane.blend1  bomb.blend  gate.blend  gate.blend1  model_Player.blend  portal.blend
Models/objFiles/: Plane.mtl  bug_EnemyHead.mtl  gate.mtl  model_Player.mtl  robot_EnemyHead.mtl
Sound_lib/include/: SoundEngine.hpp
Sound_lib/src/: SoundEngine.cpp
animations/: model_Player 2_ninja_jump.dae
blenderFiles/: Plane.blend  bug_EnemyHead.blend  bug_EnemyHead.blend1  gate.blend  gate.blend1  model_Player.blend  model_Player.blend1  model_lock_gate.blend  model_lock_gate.blend1  robot_EnemyHead.blend  robot_EnemyHead.blend1
include/: ._AEntity.class.hpp  ._Bomb.class.hpp  ._Enemy.class.hpp  ._Exception.class.hpp  ._Explosion.class.hpp  ._GameEngine.class.hpp  ._Gate.class.hpp  ._Player.class.hpp  ._Powerup.class.hpp  ._Wall.class.hpp  ._main.hpp  AEntity.class.hpp  Bomb.class.hpp  Enemy.class.hpp  Explosion.class.hpp  GameEngine.class.hpp  Gate.class.hpp  Player.class.hpp  Powerup.class.hpp  Wall.class.hpp  main.hpp
mapDir/: ._map.map  ._map01.map  ._map02.map  mad00.map  map.map  map00.map  map01.map  map02.map  map03.map  map04.map  map05.map  map06.map  map09.map
objFiles/: bomb.mtl  model_lock_gate.mtl  robot_EnemyHead.mtl
src/: ._AEntity.class.cpp  ._Bomb.class.cpp  ._Enemy.class.cpp  ._Exception.class.cpp  ._Explosion.class.cpp  ._GameEngine.class.cpp  ._Gate.class.cpp  ._Player.class.cpp  ._Powerup.class.cpp  ._Wall.class.cpp  ._main.cpp  AEntity.class.cpp  Bomb.class.cpp  Enemy.class.cpp  Exception.class.cpp  Explosion.class.cpp  GameEngine.class.cpp  Gate.class.cpp  Player.class.cpp  Wall.class.cpp  main.cpp
